[gd_scene load_steps=8 format=3 uid="uid://bi4gelx5xhmki"]

[ext_resource type="Script" path="res://menu.gd" id="1_hb2ff"]
[ext_resource type="Texture2D" uid="uid://cr7xvjt8cy72h" path="res://sprites/48c-removebg-preview.png" id="2_igull"]
[ext_resource type="Texture2D" uid="uid://bjpv0bc5i5i12" path="res://sprites/background_menu.PNG" id="2_lfiyr"]
[ext_resource type="FontFile" uid="uid://2g7nibblpvpr" path="res://font/joystix monospace.otf" id="3_0w78h"]
[ext_resource type="Texture2D" uid="uid://frtma7ui2h34" path="res://sprites/gauche.png" id="4_npdwu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88kqu"]
bg_color = Color(0.878431, 0.305882, 0.921569, 1)
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="ViewportTexture" id="ViewportTexture_syr1k"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 16.0
offset_right = 2.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hb2ff")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
offset_right = -171.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.17356, 1.28402)
color = Color(0.67451, 0.847059, 1, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.678431, 0.431373, 0.643137, 1)
position = Vector2(576, 308)
scale = Vector2(1.47184, 1.65926)
texture = ExtResource("2_lfiyr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -271.0
offset_right = 172.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.00249294
pivot_offset = Vector2(172, 73.5)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/VBoxContainer"]
position = Vector2(170.758, 380.004)
rotation = -0.00256082
scale = Vector2(0.825503, 0.747456)
skew = 0.000133872
texture = ExtResource("2_igull")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.0941176, 0.215686, 0.313726, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_font_sizes/font_size = 28
text = "WELCOME TO 48C GAMES"
horizontal_alignment = 1

[node name="select game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0w78h")
theme_override_styles/normal = SubResource("StyleBoxFlat_88kqu")
text = "Play !"
icon = SubResource("ViewportTexture_syr1k")

[node name="minigames" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0w78h")
theme_override_styles/normal = SubResource("StyleBoxFlat_88kqu")
text = "minigames"
icon = SubResource("ViewportTexture_syr1k")

[node name="music" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0w78h")
theme_override_styles/normal = SubResource("StyleBoxFlat_88kqu")
text = "music"
icon = SubResource("ViewportTexture_syr1k")

[node name="credit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0w78h")
theme_override_styles/normal = SubResource("StyleBoxFlat_88kqu")
text = "credit
"
icon = SubResource("ViewportTexture_syr1k")

[node name="restart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0w78h")
theme_override_styles/normal = SubResource("StyleBoxFlat_88kqu")
text = "restart"
icon = SubResource("ViewportTexture_syr1k")

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0w78h")
theme_override_styles/normal = SubResource("StyleBoxFlat_88kqu")
text = "quit
"
icon = SubResource("ViewportTexture_syr1k")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 70.0
offset_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="bacteria" type="Sprite2D" parent="."]
position = Vector2(214, 330)
rotation = -1.0472
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_npdwu")

[connection signal="pressed" from="MarginContainer/VBoxContainer/select game" to="." method="_on_select_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/minigames" to="." method="_on_minigames_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
